--- a/Dockerfile.buildozer
+++ b/Dockerfile.buildozer
@@ -7,7 +7,7 @@ RUN apt-get update && \
         git \
         zip \
         unzip \
-        openjdk-11-jdk \
+        default-jdk \
         python3-pip \
         python3-setuptools \
         python3-dev \
