--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -19,9 +19,16 @@ jobs:
 
       - name: Run build container to make APK
         run: |
+          # Start container
           CONTAINER_ID=$(docker run -d --name buildozer_run kivy-buildozer:latest tail -f /dev/null)
-          docker exec $CONTAINER_ID bash -lc "cd /home/build && buildozer -v android debug"
+
+          # Run Buildozer with --no-confirm to avoid interactive prompts
+          docker exec $CONTAINER_ID bash -lc "cd /home/build && buildozer -v android debug --no-confirm"
+
+          # Copy APK from container to host
           docker cp $CONTAINER_ID:/home/build/bin ./bin || true
+
+          # Remove container
           docker rm -f $CONTAINER_ID
 
       - name: Upload APK artifact
