--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -3,6 +3,7 @@ name: Build Android APK (Buildozer Docker)
 on:
   push:
     branches: [ master ]
+  workflow_dispatch:   # Allows manual trigger
 
 jobs:
   build-apk:
