--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -8,26 +8,28 @@ on:
 jobs:
   build-apk:
     runs-on: ubuntu-latest
-    env:
-      BUILDOZER_ALLOW_ROOT: 1   # Allows Buildozer to run as root
 
     steps:
+      # Step 1: Checkout repository
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # Step 3: Build Docker image for Buildozer
       - name: Build Docker image for Buildozer
         run: docker build -f Dockerfile.buildozer -t kivy-buildozer:latest .
 
+      # Step 4: Run Docker container and build APK
       - name: Run build container to make APK
         run: |
-          # Start container
-          CONTAINER_ID=$(docker run -d --name buildozer_run kivy-buildozer:latest tail -f /dev/null)
+          # Start container with repo mounted
+          CONTAINER_ID=$(docker run -d --name buildozer_run -v $GITHUB_WORKSPACE:/home/build kivy-buildozer:latest tail -f /dev/null)
 
-          # Run Buildozer with --no-confirm and --no-root to avoid interactive prompts
-          docker exec $CONTAINER_ID bash -lc "cd /home/build && buildozer -v android debug --no-confirm --no-root"
+          # Run Buildozer inside container
+          docker exec $CONTAINER_ID bash -lc "cd /home/build && buildozer -v android debug --no-confirm"
 
           # Copy APK from container to host
           docker cp $CONTAINER_ID:/home/build/bin ./bin || true
@@ -35,6 +37,7 @@ jobs:
           # Remove container
           docker rm -f $CONTAINER_ID
 
+      # Step 5: Upload APK artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
