--- a/Dockerfile.buildozer
+++ b/Dockerfile.buildozer
@@ -1,45 +1,19 @@
-name: Build Android APK (Buildozer Docker)
+FROM ubuntu:20.04
 
-on:
-  push:
-    branches: [ master ]
-  workflow_dispatch:   # Allows manual trigger
+ENV DEBIAN_FRONTEND=noninteractive
 
-jobs:
-  build-apk:
-    runs-on: ubuntu-latest
+# Install dependencies
+RUN apt-get update && apt-get install -y \
+    python3 python3-pip python3-setuptools \
+    openjdk-8-jdk \
+    build-essential \
+    git zip unzip wget curl \
+    libssl-dev libffi-dev libsqlite3-dev \
+    zlib1g-dev libjpeg-dev libpng-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-    steps:
-      # Step 1: Checkout repository
-      - name: Checkout repo
-        uses: actions/checkout@v4
+# Upgrade pip and install Cython + Buildozer
+RUN pip3 install --upgrade pip cython buildozer
 
-      # Step 2: Set up Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      # Step 3: Build Docker image for Buildozer
-      - name: Build Docker image for Buildozer
-        run: docker build -f Dockerfile.buildozer -t kivy-buildozer:latest .
-
-      # Step 4: Run Docker container and build APK
-      - name: Run build container to make APK
-        run: |
-          # Start container with repo mounted
-          CONTAINER_ID=$(docker run -d --name buildozer_run -v $GITHUB_WORKSPACE:/home/build kivy-buildozer:latest tail -f /dev/null)
-
-          # Set a writable BUILDOZER_HOME inside container
-          docker exec $CONTAINER_ID bash -lc "export BUILDOZER_HOME=/tmp/.buildozer && mkdir -p \$BUILDOZER_HOME && buildozer -v android debug --no-confirm"
-
-          # Copy APK from container to host
-          docker cp $CONTAINER_ID:/home/build/bin ./bin || true
-
-          # Remove container
-          docker rm -f $CONTAINER_ID
-
-      # Step 5: Upload APK artifact
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-apk
-          path: bin/*.apk
+# Set working directory
+WORKDIR /home/build
