Fix buildozer workflow to allow root and auto-accept licenses

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -28,8 +28,8 @@ jobs:
           # Start container with repo mounted
           CONTAINER_ID=$(docker run -d --name buildozer_run -v $GITHUB_WORKSPACE:/home/build kivy-buildozer:latest tail -f /dev/null)
 
-          # Set a writable BUILDOZER_HOME inside container
-          docker exec $CONTAINER_ID bash -lc "export BUILDOZER_HOME=/tmp/.buildozer && mkdir -p \$BUILDOZER_HOME && buildozer -v android debug --no-confirm"
+          # Run Buildozer inside container with root check disabled
+          docker exec $CONTAINER_ID bash -lc "export BUILDOZER_ALLOW_ROOT=1 && export BUILDOZER_HOME=/tmp/.buildozer && mkdir -p \$BUILDOZER_HOME && buildozer -v android debug --no-confirm --accept-android-license"
 
           # Copy APK from container to host
           docker cp $CONTAINER_ID:/home/build/bin ./bin || true
