--- a/Dockerfile.buildozer
+++ b/Dockerfile.buildozer
@@ -12,8 +12,9 @@ RUN apt-get update && apt-get install -y \
     zlib1g-dev libjpeg-dev libpng-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Upgrade pip and install latest Buildozer from GitHub
-RUN pip3 install --upgrade pip cython git+https://github.com/kivy/buildozer.git
+# Upgrade pip and install latest Buildozer directly from GitHub (NOT PyPI)
+RUN pip3 install --upgrade pip cython \
+    && pip3 install git+https://github.com/kivy/buildozer.git
 
 # Set working directory
 WORKDIR /home/build
